
xap/leafpad-0.8.18.1-i486-1_microlinux.txz: Added.
xap/galculator-2.1.3-i486-1_microlinux.txz: Added.
+--------------------------+
Sat Jan  3 11:56:27 CET 2015
gnome/evince-3.12.2-i486-1_microlinux.txz: Added.
gnome/gmtk-1.0.8-i486-1_microlinux.txz: Added.
gnome/gnome-mplayer-1.0.8-i486-1_microlinux.txz: Added.
d/numpy-1.9.1-i486-1_microlinux.txz: Added.
l/BeautifulSoup-3.2.1-i486-1_microlinux.txz: Added.
l/gsl-1.16-i486-1_microlinux.txz: Added.
l/lxml-3.4.0-i486-1_microlinux.txz: Added.
xap/inkscape-0.48.5-i486-1_microlinux.txz: Added.
xap/openshot-1.4.3-i486-1_microlinux.txz: Added.
xap/transmission-2.84-i486-1_microlinux.txz: Added.
xap/scribus-1.4.4-i486-1_microlinux.txz: Added.
xfce/ristretto-0.6.3-i486-1_microlinux.txz: Added.
xfce/xarchiver-0.5.4-i486-1_microlinux.txz: Added.
xfce/thunar-archive-plugin-0.3.1-i486-1_microlinux.txz: Added.
multimedia/cddb-py-1.4-i486-1_microlinux.txz: Added.
+--------------------------+
Fri Jan  2 20:04:43 CET 2015
gnome/libsigc++-2.2.11-i486-1_microlinux.txz: Added.
gnome/glibmm-2.36.2-i486-1_microlinux.txz: Added.
gnome/cairomm-1.10.0-i486-1_microlinux.txz: Added.
gnome/pangomm-2.34.0-i486-1_microlinux.txz: Added.
gnome/atkmm-2.22.7-i486-1_microlinux.txz: Added.
gnome/mm-common-0.9.6-noarch-1_microlinux.txz: Added.
gnome/gtkmm-2.24.4-i486-1_microlinux.txz: Added.
gnome/goocanvas-0.15-i486-1_microlinux.txz: Added.
gnome/pygoocanvas-0.14.1-i486-1_microlinux.txz: Added.
gnome/totem-pl-parser-3.4.5-i486-1_microlinux.txz: Added.
gnome/libunique-1.1.6-i486-1_microlinux.txz: Added.
multimedia/lame-3.99.5-i486-1_microlinux.txz: Added.
multimedia/x264-20131101-i486-1_microlinux.txz: Added.
multimedia/libmp4v2-2.0.0-i486-1_microlinux.txz: Added.
multimedia/faac-1.28-i486-1_microlinux.txz: Added.
multimedia/frei0r-1.4-i486-1_microlinux.txz: Added.
multimedia/xvidcore-1.3.3-i486-1_microlinux.txz: Added.
multimedia/ffmpeg-2.1.5-i686_custom-1_microlinux.txz: Added.
multimedia/libcdaudio-0.99.12p2-i486-1_microlinux.txz: Added.