@@ -85,6 +85,6 @@ xfce/thunar-archive-plugin
 multimedia/cddb-py
 xap/leafpad
 xap/galculator
-
+xap/catfish
 
 
